Adicionado validação para criação de clientes, medicos, endereços e consultas