@@ -5,6 +5,7 @@ import com.example.consultas.dtos.MedicoResponseDto;
 import com.example.consultas.exceptions.MedicoNotFoundException;
 import com.example.consultas.models.MedicoModel;
 import com.example.consultas.repositories.MedicoRepository;
+import jakarta.persistence.EntityExistsException;
 import jakarta.transaction.Transactional;
 import org.springframework.beans.BeanUtils;
 import org.springframework.data.domain.Page;
@@ -61,11 +62,20 @@ public class MedicoService {
     }
 
 
+    @Transactional
     public MedicoResponseDto addMedico(MedicoRequestDto medicoRequestDto) {
+        if(medicoRepository.existsByEmail(medicoRequestDto.email())) {
+            throw new EntityExistsException("Email já cadastrado.");
+        }
+
+        if(medicoRepository.existsByCrm(medicoRequestDto.crm())) {
+            throw new EntityExistsException("CRM já cadastrado.");
+        }
+
         MedicoModel medicoModel = new MedicoModel();
         BeanUtils.copyProperties(medicoRequestDto, medicoModel);
 
-        medicoModel.setSenha(passwordEncoder.encode(medicoModel.getSenha()));
+        medicoModel.setSenha(passwordEncoder.encode(medicoRequestDto.senha()));
 
         return new MedicoResponseDto(medicoRepository.save(medicoModel));
     }
@@ -73,10 +83,22 @@ public class MedicoService {
 
     @Transactional
     public MedicoResponseDto updateMedico(UUID id, MedicoRequestDto medicoRequestDto) {
+        medicoRepository.findByEmail(medicoRequestDto.email()).ifPresent(medico -> {
+            if (!medico.getId().equals(id)) {
+                throw new EntityExistsException("Email já cadastrado.");
+            }
+        });
+
+        medicoRepository.findByCrm(medicoRequestDto.crm()).ifPresent(medico -> {
+            if (!medico.getId().equals(id)) {
+                throw new EntityExistsException("CRM já cadastrado.");
+            }
+        });
+
         MedicoModel medicoModel = medicoRepository.findById(id).orElseThrow(MedicoNotFoundException::new);
         BeanUtils.copyProperties(medicoRequestDto, medicoModel);
 
-        if(medicoRequestDto.senha() != null && !medicoRequestDto.senha().isBlank()) {
+        if(medicoRequestDto.senha() != null && !medicoRequestDto.senha().trim().isEmpty()){
             medicoModel.setSenha(passwordEncoder.encode(medicoRequestDto.senha()));
         }
 
